--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ListView
@@ -18,7 +18,7 @@
 
         <EditText
             android:id="@+id/messageEdit"
-            android:layout_width="285dp"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:layout_marginTop="54dp"
@@ -28,8 +28,9 @@
 
         <ImageView
             android:id="@+id/chatSend"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:layout_width="48dip"
+            android:layout_height="48dip"
             android:layout_gravity="end"
             android:layout_marginTop="52dp"
             android:layout_alignParentBottom="true"
@@ -40,4 +41,4 @@
 
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
